--- a/src/Shotr.Ui/Forms/NoUploadNotification.resx
+++ b/src/Shotr.Ui/Forms/NoUploadNotification.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -117,7 +57,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAldJREFUOE+Nk8trE1EYxafW2lprbf8F/xVFV7py50oXBVfdiZtCkLgRKrjwFYVi
+        0rorikhArcQk2qZoyEOM1ZJXY16dJJ1J0sxk0uR0zs1ckS7ED264DPl9j3O+qwAQZzB7yTWYvaz1Zq7A
+        nLmK9pnr0KdvoDE9D/X0TVSmFlCccmPn1F0tM3nfJTmCM/aJ2zD+A4YNY3vyMbZOLsVlAlbGIJlFP5bB
+        wactHIR/oXPHDyucRjecRdMdhBnegRH6DTOqwozX8X3iBZITqy47wbDtgQ33PB9grWygu7IJ49kG9j2b
+        6Cwn0HoaQ8uXQtP3E/V732BE64QRG3+jKbJtVib8d/S2685tGEa0Bs2XQTukEsbX8fdQ5Mxsm5WPhrle
+        dG52gkQDDV8erVBNwJETIShSMM7cXvDDWI6JtvXFCEoXV1E4/wp9vYv2x4pIUvPkUbydFvDnsQgUqTYF
+        Iyxjd+6dVBvl+S+wih3xveYtQQ9qAg6NxaBIq6g2KzO6SRXVuYCAqXbVnRLfGaq3YifQBRw4noIifaZV
+        VJtBq9h29twa0hdCUB/lRGXVW0XuVh45V1nAa6NpKHJJ6DOtMtbLIgmDah+NireOveC+gN+OFqDIDeOS
+        6Es/0G92nb8Owyqazm0Y5ecaGkFDwP5ju1Cc3RZtNx6mhM+0imqz7dJiAZUnVVGZcOGBjmbCQuBsHa9H
+        dE3hw6DaXE9uGNumz7SKalMwzsy2WbkZt9DbGyB2rYOXI6ZLvCg+DGe3/2yY9FmqLWdmZQcePib+8PBh
+        cLf/BXNmts3KQw7KIdAOGf0JEl8VAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
