--- a/src/Shotr.Core/Properties/Resources.resx
+++ b/src/Shotr.Core/Properties/Resources.resx
@@ -128,7 +128,7 @@
     <value>..\Resources\shotr-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="shotr_icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shotr-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\256x256_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sounds_1046_et_voila" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sounds-1046-et-voila;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
