--- a/src/Shotr.Ui/Properties/Resources.resx
+++ b/src/Shotr.Ui/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="shotr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shotr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shotr_icon_ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\shotr-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
