--- a/src/Shotr.Ui/Properties/Resources.resx
+++ b/src/Shotr.Ui/Properties/Resources.resx
@@ -124,8 +124,8 @@
   <data name="shotr-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shotr-icon.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="audio_sniffer" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\audio_sniffer;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="ffmpeg_dshow_audio" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ffmpeg_dshow_audio;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="a" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\a;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
